force-app/main/default/objects/EdPlusTask__x.object
<CustomObject>
    <description>EdPlus Tasks (Cross Org Initiative)</description>
    <externalDataSource>EdPlusCrossOrg</externalDataSource>
    <externalName>Task</externalName>
    <fields>
        <fullName>Activity_Date_edpl__c</fullName>
        <externalDeveloperName>ActivityDate</externalDeveloperName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_End_edpl__c</fullName>
        <externalDeveloperName>Actual_End__c</externalDeveloperName>
        <label>Actual End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Disposition_edpl__c</fullName>
        <externalDeveloperName>CallDisposition</externalDeveloperName>
        <label>Call Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Duration_In_Seconds_edpl__c</fullName>
        <externalDeveloperName>CallDurationInSeconds</externalDeveloperName>
        <label>Call Duration</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Object_edpl__c</fullName>
        <externalDeveloperName>CallObject</externalDeveloperName>
        <label>Call Object Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Type_edpl__c</fullName>
        <externalDeveloperName>CallType</externalDeveloperName>
        <label>Call Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Id_edpl__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By</label>
        <length>18</length>
        <referenceTo>EdPlusUser__x</referenceTo>
        <relationshipLabel>Tasks (EdPlus) Created By</relationshipLabel>
        <relationshipName>Tasks_EdPlus1</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Created_Date_edpl__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description_edpl__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Direction_edpl__c</fullName>
        <externalDeveloperName>Email_Direction__c</externalDeveloperName>
        <label>Email Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Reminder_Set_edpl__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsReminderSet</externalDeveloperName>
        <label>Reminder Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Id_edpl__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By</label>
        <length>18</length>
        <referenceTo>EdPlusUser__x</referenceTo>
        <relationshipLabel>Tasks (EdPlus) Last Modified By</relationshipLabel>
        <relationshipName>Tasks_EdPlus2</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_edpl__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner_Id_edpl__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Assigned To</label>
        <length>18</length>
        <referenceTo>EdPlusUser__x</referenceTo>
        <relationshipLabel>Tasks (Ed Plus) Assigned To</relationshipLabel>
        <relationshipName>Tasks_EdPlus</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Priority_edpl__c</fullName>
        <externalDeveloperName>Priority</externalDeveloperName>
        <label>Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_Date_Time_edpl__c</fullName>
        <externalDeveloperName>ReminderDateTime</externalDeveloperName>
        <label>Reminder Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_edpl__c</fullName>
        <externalDeveloperName>Status</externalDeveloperName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_edpl__c</fullName>
        <externalDeveloperName>Subject</externalDeveloperName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Subtype_edpl__c</fullName>
        <externalDeveloperName>TaskSubtype</externalDeveloperName>
        <label>Task Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_edpl__c</fullName>
        <externalDeveloperName>Type</externalDeveloperName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_Id_edpl__c</fullName>
        <externalDeveloperName>WhatId</externalDeveloperName>
        <label>Related To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_Id_edpl__c</fullName>
        <externalDeveloperName>WhoId</externalDeveloperName>
        <label>Name</label>
        <length>18</length>
        <referenceTo>EdPlusContact__x</referenceTo>
        <relationshipLabel>Tasks (EdPlus)</relationshipLabel>
        <relationshipName>Tasks_EdPlus</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>inContact_Call_History_Link_edpl__c</fullName>
        <externalDeveloperName>inContact_Call_History_Link__c</externalDeveloperName>
        <label>inContact Call History Link</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <label>Task (EdPlus)</label>
    <pluralLabel>Tasks (EdPlus)</pluralLabel>
</CustomObject>